--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
 
 %html{html_attrs}
   %head 
-    %title= "Teach more. Help more. Grade less."
+    %title= "Partners in Practice"
     = stylesheet_link_tag "application" 
     = javascript_include_tag "application", "welcome"
     = javascript_include_tag "external" if Rails.env == "production"
@@ -33,7 +33,7 @@
             .navbar-inner
               %a.brand.span4{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
-                #tagline= 'Grades will happen'
+                #tagline= 'Partners in Practice'
               %ul.nav.span6
                 %li.pull-left
                   #signin-form
