Same tagline for all roles

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -77,7 +77,7 @@
             .navbar-inner
               %a.brand.span4{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
-                #tagline= 'Grades will happen'
+                #tagline= 'Partners in Practice'
               %ul.nav.span8.pull-right
                 %li
                   = simple_link for: 'Indie', icon: 'icon-star', id: 'a-grade-stabs' 
