--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -68,7 +68,7 @@
             .navbar-inner
               %a.brand.span4{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
-                #tagline= 'Grades will happen'
+                #tagline= 'Partners in Practice'
               %ul.nav.span8.pull-right
                 - for l in control_panel 
                   %li{ class: ( l[:class].blank? ? 'dropdown' : 'dropdown hidden' ) } 
