minor styling change to tagline

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -256,7 +256,7 @@ span.btn-shortcut {
   font-size: 12px ;
   color: white ;
   max-width: 70% ;
-  margin-top: -10px ;
+  margin: { top: -10px ; left: 20% ; }
 } 
 
 #mobile-intro { 
