[shot in the dark]: Doing away with size: directive to image_tag
Looks like IE can't render the resulting HTML properly.

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -283,7 +283,7 @@ span.btn-shortcut {
       width: 167px ;
       max-height: 251px ;
       margin-top: -325px ;
-      img { max-height: 253px ; }
+      img { height: 253px ; width: 168px ; } 
     } 
   } 
 } 
@@ -382,7 +382,7 @@ span.btn-shortcut {
       font-size: 13px ;
       text-decoration: none ;
       color: white ;
-      > img { margin-right: 7px ; }
+      > img { height: 33px ; width: 30px ; margin-right: 7px ; }
     } 
   } 
 } 
