New logos for PrepWell mobile app + minor styling changes ...
The logos will be incorporated on the site AFTER changes in the mobile app
have been uploaded

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -360,9 +360,9 @@ span.btn-shortcut {
       font: { size: 11px ; weight: 400 ; }
       padding: 0px 4px 1px 4px; 
       border-radius: 4px ;
-      background-color: $deep-blue ; 
-      color: white ;
-      &.orange { background-color: $orange ; color: $panel-color ; } 
+      background-color: lighten($lightgray, 40%) ; 
+      color: black ; 
+      //&.orange { background-color: $orange ; color: $panel-color ; } 
     } 
   } 
 } 
