Removed references to scanbot and changed it to PrepWell ...
The welcome mail to students also has a link taking them directly to
the AppStore.

--- a/app/views/mailbot/_student.html.haml
+++ b/app/views/mailbot/_student.html.haml
@@ -4,18 +4,9 @@
     %li
       <b>Download our Android app ...</b> 
       %p
-        %ul
-          %li
-            Go to Google Play on your Android phone.
-          %li
-            Enter Gradians.com in the search box.
-          %li
-            The first app that shows up (called Gradians.com Scanbot) is what you need. 
-            Click on <b>Install</b>.
-          %li
-            Once installed, log into the app using the same e-mail and password you 
-            registered with.
-    %li
+        Click on the link below
+      %p
+        https://play.google.com/store/apps/details?id=com.gradians.collect&hl=en 
       <b>... then, start practising Maths problems</b>
       %p
         %ul
