--- a/app/views/mobile/_intro.html.haml
+++ b/app/views/mobile/_intro.html.haml
@@ -26,7 +26,7 @@
         .li
           .heading.orange= 'Stuck?'
           .subtext
-            View our solution <span class='bubble orange'>paid</span> or send your work to us for review 
+            View our solution <span class='bubble'>paid</span> or send your work to us for review 
             <span class='bubble'>free</span>. We will help 
             you understand any gaps in your solution.
       .span5.offset1
@@ -39,12 +39,12 @@
           .subtext
             \... and we will give you <span class='bubble'>100 free credit points</span> to spend on the mobile app. 
     .row-fluid{ id: 'next-steps' }
-      .span4.offset2
+      .span5.offset1
         %a{ id: 'a-scanbot', href: 'https://play.google.com/store/apps/details?id=com.gradians.collect&hl=en', 
             target: '_blank', data: { 'no-touch' => :true } }
-          = image_tag 'scanbot-trans.png'
-          Download Mobile App
-      .span3
+          = image_tag 'landing-2/prepwell-orange.png'
+          download <span class='orange'>PrepWell</span> mobile app 
+      .span3.offset1
         %a{ id: 'a-founders', data: { 'no-touch' => :true } }
           = image_tag 'landing/group-3359.png'
-          About Us
+          about us
