--- a/app/assets/stylesheets/indie.css
+++ b/app/assets/stylesheets/indie.css
@@ -4,4 +4,5 @@
 *= require rubric.css.scss
 *= require indie/stabs.css.scss
 *= require_directory ../../../vendor/assets/stylesheets/tooltipster
+*= require_directory ../../../vendor/assets/stylesheets/tag-it
 */
