--- a/app/assets/stylesheets/indie.css
+++ b/app/assets/stylesheets/indie.css
@@ -1,5 +1,6 @@
 
 /*
+*= require jquery.ui.autocomplete
 *= require indie/assets.css.scss
 *= require rubric.css.scss
 *= require indie/stabs.css.scss
