Some name changes -> more to come

--- a/app/views/layouts/ad-ex.html.haml
+++ b/app/views/layouts/ad-ex.html.haml
@@ -53,7 +53,7 @@
 
 %html{html_attrs}
   %head 
-    = javascript_include_tag "application", "admin"
+    = javascript_include_tag "application", "ad-ex"
     %script{ type: "text/x-mathjax-config" } 
       MathJax.Hub.Register.StartupHook("HTML-CSS Jax Ready", function() {
       var VARIANT = MathJax.OutputJax["HTML-CSS"].FONTDATA.VARIANT ;
