--- a/app/views/layouts/ad-ex.html.haml
+++ b/app/views/layouts/ad-ex.html.haml
@@ -65,7 +65,7 @@
       }
       }) ;
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
-    = stylesheet_link_tag "application", "indie"
+    = stylesheet_link_tag "application", "ad-ex", "indie"
     = csrf_meta_tag
 
   %body 
