--- a/app/views/menus/examiner/_per-doubt.html.haml
+++ b/app/views/menus/examiner/_per-doubt.html.haml
@@ -3,7 +3,6 @@
   %li
     = simple_link for: 'Tag', id: 'a-tag-doubt', icon: 'icon-tags'
   %li
-    = simple_link for: 'Refund', id: 'a-refund-doubt', icon: 'icon-minus', remote: true, 
-    url: "#{doubt_refund_path}?id=:a"
+    = simple_link for: 'Refund', id: 'a-refund-doubt', icon: 'icon-minus', remote: true
   %li
     = simple_link for: 'Upload Solution', id: 'a-solve-doubt', icon: 'icon-arrow-up'
