a-grade-stabs -> a-indie-main
Also, doubts are the first thing shown to examiners on login.
Its more likely that we will get student doubts than stabs at our questions.

--- a/app/views/layouts/ad-ex.html.haml
+++ b/app/views/layouts/ad-ex.html.haml
@@ -80,7 +80,7 @@
                 #tagline= 'Partners in Practice'
               %ul.nav.span8.pull-right
                 %li
-                  = simple_link for: 'Indie', icon: 'icon-star', id: 'a-grade-stabs' 
+                  = simple_link for: 'Indie', icon: 'icon-star', id: 'a-indie-main'
                 %li
                   = simple_link for: 'Schools', icon: 'icon-bell', id: 'a-grade-exams'
                 %li.dropdown
