Implemented solution upload ...
Next
 1. Force tagging of dounts before allowing solution upload / refund ?

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1351,7 +1351,7 @@ body > #spinner {
   } 
 } 
 
-#m-upload-what { 
+#m-upload-what, #m-upload-solution { 
   h1,h2,h3 { 
     color: white ;
     border-bottom: 1px solid white ;
