--- a/app/views/modals/examiner/_upload-solution.html.haml
+++ b/app/views/modals/examiner/_upload-solution.html.haml
@@ -1,9 +1,9 @@
 
-#m-upload-solution.modal.fade.wide{ :role => :dialog }
+#m-upload-solution.modal.fade.regular{ :role => :dialog }
   .row-fluid
-    .span2
+    .span3
       = image_tag 'quick-trial/upload.png', class: 'big-icon offset1'
-    .span9
+    .span8
       %p.title= "Upload your solution"
       .btn.btn-inverse.btn-large.upload.pull-left{id: 'btn-upload-solution'}
         Browse
