Implemented tagging of doubts using acs-as-taggable

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1579,3 +1579,14 @@ span {
   } 
 } 
 
+.tagit { 
+  &.ui-widget { font: inherit ; } 
+  &.ui-widget-content { 
+    background: none ; 
+    border: { 
+      radius: 0px ; 
+      style: none ; 
+      bottom: 1px dotted $orange ;
+    } 
+  } 
+} 
