--- a/app/views/mailbot/teacher_digest.html.haml
+++ b/app/views/mailbot/teacher_digest.html.haml
@@ -3,7 +3,7 @@
 %p
   Below is the synopsis of all assignments which saw submissions in the past #{@n} days.
 %p
-  %table 
+  %table{ style: 'width=60% ;' } 
     %tr 
       %th= "Start date" 
       %th= "End date" 
@@ -12,15 +12,15 @@
       %td= "#{@end_date}"
 %p
   %table 
-    %tr
+    %tr{ style: 'text-align: center;' }
       %th= "Quiz"
       %th= "Section" 
-      %th= "Full submissions"
-      %th= "Partial submissions"
-      %th= "No submissions" 
+      %th= "Full submits"
+      %th= "Partial submits"
+      %th= "No submits" 
       %th= "Average"
     - for j in @details 
-      %tr
+      %tr{ style: 'text-align: center ;' }
         %td= "#{j[:q]}"
         %td= "#{j[:e]}"
         %td= "#{j[:fully]}"
