Re-upload with reason(s)

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1426,7 +1426,7 @@ body > #spinner {
   } 
 }
 
-#m-audit-form, #m-audit-apprentice { 
+#m-audit-form, #m-audit-apprentice, #m-reupload { 
   label.checkbox { 
     font-size: 11px ;
   } 
