--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -254,9 +254,8 @@ span.btn-shortcut {
 #tagline { 
   text-align: center ;
   font-size: 12px ;
-  color: white ;
+  color: #4D4D47 ;
   max-width: 70% ;
-  margin: { top: -10px ; left: 20% ; }
 } 
 
 #mobile-intro { 
@@ -266,78 +265,49 @@ span.btn-shortcut {
   min-height: 400px ;
   h1 { 
     font: { 
-      size: 55px ;
+      size: 40px ;
       weight: 300 ;
     } 
+		color: #4D4D47 ;
+		line-height: 45px ;
+		margin-bottom:50px ;
+		text-align:center ;
   } 
   h3 { 
     font-size: 22px ;
   } 
 
   > #live-phone { 
-    margin-left: 50px ;
-
     > #screens { 
-      margin-left: 18px ;
+      margin-left: 10px ;
       position: relative ;
-      width: 167px ;
-      max-height: 251px ;
-      margin-top: -325px ;
-      img { height: 253px ; width: 168px ; } 
+			width: 221px ;
+			height: 332px ;
+			margin-top: -394px;
+      img { height: 332px ; width: 222px ; } 
     } 
   } 
 } 
 
-#potd { 
-  margin-top: -20px ;
-  font-size: 12px ;
-  line-height: 16px ;
-
-  .stopwatch { 
-    font: { size: 17px ; } 
-    margin-top: 4px ;
-  } 
-
-  .small-text {
-    font: { 
-      size: 12px ;
-    }
-  } 
-  > div { 
-    padding: { 
-      top: 20px ;
-      bottom: 20px ;
-    } 
-
-    .title { 
-      color: $orange ;
-    } 
-
-    img { 
-      padding: 10px 15px ;
-      border-radius: 7px ;
-      &.blue {
-        background-color: #01537d ;
-      } 
-      &.gray { 
-        background-color: $panel-color; 
-      } 
-    } 
-
-    &:first-child { // .row-fluid where potd is displayed 
-      > div:last-child { // instructions to student
-        font-size: 12px ;
-      } 
-
-      > div:first-child { // problem text
-        .span2 { margin-left: -10px ; margin-right: 10px ; }
-      } 
-    } 
-
-    &:last-child { 
-      
-    } 
-  } 
+#top-bar {
+	background: white ;
+	border: none ;
+	box-shadow: none ;
+	border: { 
+		bottom: 2px solid ;
+		color: #9F9E8F;
+	} 
+	padding: { 
+		bottom: 5px ;
+		top: 5px ;
+	} 
+	h1, h5 { color: #4d4d47 ; }
+	h5 { 
+		margin-top: -5px ;
+	} 
+	h1 { 
+		margin-top: 11px ;
+	} 
 } 
 
 #mktg-spiel { 
