--- a/app/views/modals/guest/_founders.html.haml
+++ b/app/views/modals/guest/_founders.html.haml
@@ -8,24 +8,25 @@
       = image_tag 'founders/abhinav-53714.png'
     .span4
       .title= 'Abhinav Chaturvedi'
-      %div
-        A graduate of UCLA's Anderson School of Management, Abhinav first 
-        realized the need for Gradians.com while grading papers for his 
-        statistics professor. It occurred to him that if the teachers  
-        had to do this themselves, they could not do it very often.
-        This was the genesis of the idea.
-      %div
-        Prior to this Abhinav worked in the Electronic Design Automation (EDA) 
-        industry, developing software design tools for semiconductor firms. 
-        His first computer was Sinclair's ZX Spectrum. He is still holding on to it, 
-        even though he now programs on his laptop. 
+      %p
+        Abhinav believes that every student is atmost one mistake away 
+        from getting to the right answer. 
+      %p 
+        Which is why he believes that if students are to avoid 
+        making mistakes, they must first learn to identify them. 
+      %p 
+        Other than that, Abhinav has previously worked in the 
+        Electronics Design Automation (EDA) industry where he 
+        developed design tools for semiconductor companies. He continues 
+        to love programming and is still holding onto his first 
+        computer - Sinclair's ZX Spectrum - that he got on his 10-th birthday.
+      %p 
+        Abhinav also holds an MBA from UCLA's Anderson School of Management.
+         
       .personal.push-down
         .email
           %span.orange= 'Email'
           %span= 'abhinav@gradians.com'
-        .phone
-          %span.orange= 'Phone'
-          %span= '+91-98186.91751'
         .sport
           %span.orange= 'Plays'
           %span= 'Squash'
@@ -33,32 +34,29 @@
           %span.orange= 'Favourite Sportsperson'
           %span= 'Amr Shabana (EGY)'
         .eyesight
-          %span.orange= 'Eyesight'
+          %span.orange= 'Vision'
           %span= '-5.5'
     .span1
       = image_tag 'founders/akshay-53705.png'
     .span4
       .title= 'Akshay Damarla'
-      %div
+      %p
         A graduate of NYU's Courant Institute of Mathematical Science,
-        Akshay has been involved with Gradians.com from its inception. 
+        Akshay has been involved with Prepwell from its inception. 
         He worked in the Financial Services industry for several years
         before joining Abhinav and brings with him an appreciation for 
         technology driven analysis and data management.
-      %div
+      %p
         While in graduate school he worked in the New York City public
         school system as part of an NYU initiative which sent students to
         High Schools to help as Teaching Assistants.
-      %div
+      %p
         He shares Abhinav's passion for elegant Software systems 
         and also for sports.
       .personal.push-down
         .email
           %span.orange= 'Email'
           %span= 'akshay@gradians.com'
-        .phone
-          %span.orange= 'Phone'
-          %span= '+91-95829.67528'
         .sport
           %span.orange= 'Plays'
           %span= 'Tennis'
@@ -66,5 +64,5 @@
           %span.orange= 'Favourite Sportsperson'
           %span= 'Roger Federer (SUI)'
         .eyesight
-          %span.orange= 'Eyesight'
-          %span= 'Normal'
+          %span.orange= 'Vision'
+          %span= 'X-Ray'
