--- a/app/views/mobile/_intro.html.haml
+++ b/app/views/mobile/_intro.html.haml
@@ -1,13 +1,35 @@
 
-#mobile-intro.row-fluid 
-  %h1.span6.offset3
-    Turn your smartphone into your practice partner 
-  #live-phone.span3.offset4
-    = image_tag 'prepwell/phone.png'
-    #screens.carousel.slide
+#big-banner.row-fluid 
+  %h1.span11
+    Turn your smartphone into your practice partner
+#product-pitch.row-fluid 
+  .span2.offset1
+    %p
+      Prepwell helps students think through a problem as they are solving it. 
+    %p
+      Because only on solving a problem does one realize what one knows, what one 
+      doesn't know, and what one needs to know. 
+    %p
+      As the old Chinese saying goes
+      "I hear and I forget ; I see and I remember ; I do and I understand."
+     
+    = simple_link id: 'big-download-btn', for: 'Download', href: "https://play.google.com/store/apps/details?id=com.gradians.prepwell",
+    target: :blank, class: 'btn btn-large'
+  #live-phone.span3.offset1 
+    =image_tag 'prepwell/phone.png'
+    .carousel.slide
       .carousel-inner
-        .item.active
-          = image_tag "prepwell/1.png"
-        - for j in [2,3,5,8,9] 
+        .item.active 
+          =image_tag 'prepwell/1.png'
+        -for j in [2,3,5,8,9]
           .item 
             = image_tag "prepwell/#{j}.png"
+  .span2.offset1
+    %p
+      Every problem in Prepwell has been broken down into steps. 
+      And at each step, there is a question about a core concept / insight needed to 
+      solve the problem. 
+    %p
+      Through constant questioning, we are able to reinforce concepts 
+      that students know and introduce those that they don't. Download our 
+      app to experience this new way of practising Maths.
